<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin_larger"
    android:paddingRight="@dimen/activity_horizontal_margin_larger" >

    <RelativeLayout style="@style/LargeTitleAlt" >

        <TextView
            style="@style/LargeTitleLabelAlt"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_company_info" />
    </RelativeLayout>

    <TextView
        style="@style/Title"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_view_spacing"
        android:layout_marginTop="@dimen/default_view_spacing"
        android:text="@string/lbl_be_patient" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.66"
        android:gravity="center" >

        <!-- <ProgressBar
            android:id="@+id/progress"
            style="@style/ProgressBar"
            android:layout_height="wrap_content"
            
            android:layout_centerVertical="false"
            android:layout_marginBottom="@dimen/upload_view_spacing"
            android:visibility="visible" /> -->
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_below="@+id/logo"
            android:text="@string/lbl_contact_us"
            android:textSize="@dimen/font_size_16" />

        <!-- <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/DeterminantProgressBar"
            android:layout_below="@id/progress"
            android:progress="25" /> -->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/logo_blueprint"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.5"
        android:gravity="center" >

        <TextView
            android:id="@+id/claim_tip_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3.0dip"
            android:text="@string/lbl_credit"
            android:textColor="@color/checkout_green"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/claim_tip_1"
            android:text="@string/lbl_contact"
            android:textSize="@dimen/font_size_16" />
    </RelativeLayout>

</LinearLayout>