<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/mint_green"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin_larger"
        android:paddingRight="@dimen/activity_horizontal_margin_larger" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout style="@style/LargeTitleAlt2" >

                <TextView
                    style="@style/LargeTitleLabelAlt"
                    android:layout_centerHorizontal="true"
                    android:drawableTop="@drawable/logo_blueprint"
                    android:paddingTop="10dp"
                    android:text="@string/lbl_verify_account" />
            </RelativeLayout>

            <TextView
                android:id="@+id/verify_instruction_1"
                style="@style/Title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/default_view_spacing_smaller"
                android:layout_marginTop="@dimen/default_view_spacing"
                android:gravity="center_horizontal"
                android:text="@string/lbl_verify_instruction_1" />

            <TextView
                android:id="@+id/lbl_current_email"
                style="@style/Label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/default_view_spacing"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:lines="1"
                android:maxLines="1"
                android:text="smail@example.com" />

            <LinearLayout
                android:id="@+id/actions_layout"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="3.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    style="@style/FauxLink"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_didnt_receive_it"
                    android:textSize="@dimen/font_size_18" />

                <TextView
                    style="@style/Link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:onClick="resendLinkPressed"
                    android:text="@string/lbl_resend_link"
                    android:textSize="@dimen/font_size_18" />

                <TextView
                    style="@style/Link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:onClick="updateEmailPressed"
                    android:text="@string/lbl_update_email"
                    android:textSize="@dimen/font_size_18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/Label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/default_view_spacing_smaller"
                    android:layout_marginTop="@dimen/default_view_spacing"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_spam_folder" />

                
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sab_alt_height"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textlines"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/new_contest_margin_left_right"
                    android:paddingRight="@dimen/new_contest_margin_left_right"
                    android:text="@string/owner"
                    android:textSize="@dimen/term_text_size" />

                
            </RelativeLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="@style/ProgressBar" />
    </RelativeLayout>

</ScrollView>